# logkit-py

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cache.yaml  checks.yaml  ci.py.opensource.yaml  ci.yaml  release.yaml  version.yaml
make/: env.Makefile  release.Makefile  setup.py.Makefile
src/outcome/logkit/: init.py  intercept.py  logger.py  proxy.py  stackdriver.py  types.py
src/outcome/logkit/fixtures/: log_output.py
test/: conftest.py  test_context.py  test_example.py  test_filters.py  test_init.py  test_intercept.py  test_proxy.py  test_stackdriver.py
test/tests/: test_context.py  test_init.py  test_intercept.py  test_logger.py  test_proxy.py  test_stackdriver.py
